# MyDreams

./: .gitignore  CODE_OF_CONDUCT.md
backend/: .env.example  Makefile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0102233fc0ba_.py  10ffdb33fba8_.py  2de14e78783e_.py  35467208c492_.py  3a4cb1e4e10b_.py  3a87d62a3765_.py  4ef5fa857754_.py  5944e381f6a3_.py  59df54f47cc9_.py  69cd35f1207b_.py  9cd8e1b5661a_.py  a8bec3c85229_.py  adcb164e2e37_.py  b771e1b9f668_.py  dc75a9b89c83_.py  e2f0a24afe08_.py  e988a6929d8d_.py  fe6ab85c8977_.py
backend/app/database/abc/: repository.py
backend/app/database/connector/: connector.py
backend/app/database/models/: models.py
backend/app/database/repo/: subscribe_repository.py  user_repository.py  wish_repository.py  wishes_in_list_repository.py  wishes_list_repository.py
backend/app/routing/: access_router.py  friends_router.py  main_router.py  profile_router.py  wish_lists_router.py  wish_router.py
backend/app/schema/: access.py  read_user.py
backend/app/schema/profile/: update_profile.py
backend/app/schema/wishes/: create_wish.py  get_wish.py  update_wish.py
backend/app/security/: oauth.py
backend/app/security/jwt/: jwtmanager.py  jwttype.py
backend/app/security/jwt_provider/: jwtmanager.py
backend/app/services/: search_service.py  sub_service.py  user_service.py  wish_list_service.py  wish_service.py
backend/app/settings/: settings.py
backend/app/utils/ext/: result.py
backend/docker/: docker-compose.yml
