[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["xxxw1tnessbtwxxx <89967499+xxxw1tnessbtwxxx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
asyncpg = "^0.30.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
fastapi = "^0.115.6"
alembic = "^1.14.0"
yarl = "^1.18.3"
greenlet = "^3.1.1"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
