[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["w1tnessbtwwwww <work.w1tnessbtw@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pyjwt = "^2.10.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.7.1"
yarl = "^1.18.3"
greenlet = "^3.1.1"
alembic = "^1.14.1"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
